--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "bootstrap": "^5.3.0",
+        "bootstrap-icons": "^1.10.5",
         "jquery": "^3.7.0"
     }
 }
