--- a/.github/workflows/deployKostify.yml
+++ b/.github/workflows/deployKostify.yml
@@ -1,19 +1,20 @@
-name: Publish Website to Cpanel Hostinger
-on:
+on: 
   push:
-      branches:
+    branches:
       - main
+name: 🚀 Deploy website on push
 jobs:
-  FTP-Deploy-Action:
-    name: FTP-Deploy-Action
+  web-deploy:
+    name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.1.0
-        with:
-          fetch-depth: 2
-      - name: FTP-Deploy-Action
-        uses: SamKirkland/FTP-Deploy-Action@3.1.1
-        with:
-          ftp-server: ${{ secrets.FTP_SERVER_KOSTIFY }}
-          ftp-username: ${{ secrets.FTP_USERNAME_KOSTIFY }}
-          ftp-password: ${{ secrets.FTP_PASSWORD_KOSTIFY }}
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v3
+    
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+      with:
+        server: ${{ secrets.FTP_SERVER_KOSTIFY }}
+        username: ${{ secrets.FTP_USERNAME_KOSTIFY }}
+        password: ${{ secrets.FTP_PASSWORD_KOSTIFY }}
+          
